<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vibeing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_txt">Continue</string>
    <string name="joined_us_before">Joined us before ?</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="d_o_b">D.O.B</string>
    <string name="gender">Gender</string>
    <string name="please_enter_email_address">Please enter the email address</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="please_enter_password">Please enter the password</string>
    <string name="password_must_be_atleast_six_chars">Password must be atleast 6 digits</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="name_must_be_atleast_two_chars">Name must be atleast 2 character</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="please_select_your_gender">Choose Gender</string>
    <string name="incorrect_gender_type">Incorrect gender type</string>
    <string name="details">Details</string>
    <string name="register">Register</string>
    <string name="please_select_dob">Please select D.O.B</string>
    <string name="new_to_vibeing">New to Vibeing ?</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password_txt">Forgot Password ?</string>
    <string name="submit">Submit</string>
    <string name="a_password_reset_link_will_be_sent_to_your_registered_email_address">A password reset link will be sent to your registered email address.</string>
    <string name="password_not_match">Password didn\'t match</string>
    <string name="verifying" tools:ignore="TypographyEllipsis">Verifying...</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="a_reset_password_link_has_been_sent_to_the_registered_email_address">A reset password link has been sent to the registered email address</string>
    <string name="please_click_back_to_exit_app">Please click BACK again to exit</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="what_s_on_your_mind">What\'s on your mind ?</string>
    <string name="everyone">Everyone</string>
    <string name="everyone_bottom_sheet">Everyone \n <font size="11">This post will be visible to everyone</font></string>
    <string name="friends_bottom_sheet">Friends \n <font size="11">This post will only be visible to your friends</font></string>
    <string name="friends">Friends</string>
    <string name="uploading_your_post" tools:ignore="TypographyEllipsis">Uploading your post...</string>
    <string name="uploading_your_profile_photo" tools:ignore="TypographyEllipsis">Updating your profile photo...</string>
    <string name="uploading_your_cover_photo" tools:ignore="TypographyEllipsis">Updating your cover photo...</string>
    <string name="post_uploaded_successfully">Post uploaded successfully</string>
    <string name="userprofile">userProfile</string>
    <string name="galleryImage">galleryImage</string>
    <string name="cancelImage">cancelImage</string>
    <string name="visibilityImage">visibilityImage</string>
    <string name="chatImage">chatImage</string>
    <string name="addStoryImage">addStoryImage</string>
    <string name="posts">Posts</string>
    <string name="settingsImage">settingsImage</string>
    <string name="changeCoverImage">changeCoverImage</string>
    <string name="changeProfileImage">changeProfileImage</string>
    <string name="profileImage">profileImage</string>
    <string name="coverImage">coverImage</string>
    <string name="see_all_friends">See all friends</string>
    <string name="see_all_posts">See all posts</string>
    <string name="friendImage">friendImage</string>
    <string name="postImage">postImage</string>
    <string name="add_friend">Add Friend</string>
    <string name="block_user">Block User</string>
    <string name="getting_user_details">Getting User Details...</string>
    <string name="message">Message</string>
    <string name="user_not_found">User Not Found</string>
    <string name="commentsImage">commentsImage</string>
    <string name="likesImage">likesImage</string>
    <string name="no_posts_to_show">No posts to show</string>
    <string name="post_count">Posts (%1$s)</string>
    <string-array name="visibility">
        <item>Everyone</item>
        <item>Friends</item>
    </string-array>
</resources>