<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.ForgotPasswordFragment">

    <ScrollView
        android:id="@+id/forgotPasswordScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recoveryEmailTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/a_password_reset_link_will_be_sent_to_your_registered_email_address"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTxt" />

            <ImageView
                android:id="@+id/forgotPasswordImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/sign_in"
                android:scaleType="centerCrop"
                android:src="@drawable/forgot_password_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent=".28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/forgotPasswordTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/forgot_password_txt"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordImg" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1.5dp"
                app:hintTextColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recoveryEmailTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/cursor_drawable" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_white_12"
                android:backgroundTint="@color/blue"
                android:includeFontPadding="false"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailContainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>



