<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddPostFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:outlineProvider="bounds"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_black">

            <TextView
                android:id="@+id/createPostTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:includeFontPadding="false"
                android:text="@string/create_post"
                android:textColor="@color/black_white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addPostBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_white_12"
                android:enabled="false"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_1sdp"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/createPostTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/createPostTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/homeToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileImg"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/userprofile"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_user"
                app:layout_constraintBottom_toBottomOf="@id/visibilityTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/userNameTxt" />

            <TextView
                android:id="@+id/userNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black_white"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/galleryImg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/userProfileImg"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Aryan Kumar Mishra" />


            <ImageView
                android:id="@+id/galleryImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/galleryImage"
                android:src="@drawable/ic_gallery"
                app:layout_constraintBottom_toBottomOf="@+id/userProfileImg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/userProfileImg" />

            <EditText
                android:id="@+id/captionEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@null"
                android:hint="@string/what_s_on_your_mind"
                android:inputType="textMultiLine"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/visibilityTxt" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/postImg"
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/captionEdit"
                app:riv_corner_radius="16dp"
                app:riv_tile_mode="clamp"
                tools:src="@mipmap/ic_launcher"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/clearPostImg"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/circular_button"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/cancelImage"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                app:fabCustomSize="28dp"
                app:layout_constraintEnd_toEndOf="@+id/postImg"
                app:layout_constraintTop_toTopOf="@+id/postImg"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/visibilityTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/background_border_white_12"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:paddingHorizontal="8dp"
                android:text="@string/everyone"
                android:textColor="@color/black_white"
                android:textSize="@dimen/_10ssp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down_24"
                app:drawableStartCompat="@drawable/ic_everyone_mini"
                app:layout_constraintStart_toEndOf="@+id/userProfileImg"
                app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>